Registro de Usuarios
Registro de usuarios funcional

--- a/BioRec - MarketPlace/Views/Shared/_Layout.cshtml
+++ b/BioRec - MarketPlace/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
                 </div>
 
                 <div>
-                   <a asp-controller="Usuario" asp-action="Registro"><i class="bi bi-person-fill" style="font-size: 2rem;color: black;"></i></a>
+                   <a asp-controller="Usuario" asp-action="InicioDeSesion"><i class="bi bi-person-fill" style="font-size: 2rem;color: black;"></i></a>
                 </div>
             </div>
         </nav>
