--- a/BioRec - MarketPlace/Views/Usuario/InicioDeSesion.cshtml
+++ b/BioRec - MarketPlace/Views/Usuario/InicioDeSesion.cshtml
@@ -1,5 +1,48 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Inicio de Sesión";
 }
+<head>
+    <link href="~/css/StyleSheet.css" rel="stylesheet" />
+
+</head>
+
+<br />
+<div class="text-center">
+
+    <h1 class="display-1 titulo">Inicia Sesión</h1>
+
+</div>
+<br />
+<br />
+
+<form>
+    <div class="form-group row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+            <input type="email" class="form-control" placeholder="Correo Electrónico">
+        </div>
+    </div>
+    <div class="form-group row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+            <input type="password" class="form-control" placeholder="Contraseña">
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-3"></div>
+        <div class="col-md-6">
+            <button asp-controller="Usuario" asp-action="InicioDeSesion" class="btn btn-block btn-info botonPred">Inicia Sesión</button>
+        </div>
+    </div>
+
+    <div class="text-center font-weight-light">¿No tienes una cuenta? Crea una</div>
+    <br />
+    <div class="form-group row">
+        <div class="col-3"></div>
+        <div class="col-md-6">
+            <button asp-controller="Usuario" asp-action="Registro" class="btn btn-block btn-info botonPred">Regístrate</button>
+        </div>
+
+    </div>
+</form>
