--- a/BioRec - MarketPlace/Views/Home/LandingPage.cshtml
+++ b/BioRec - MarketPlace/Views/Home/LandingPage.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Inicio";
 }
 <home><link href="~/css/StyleSheet.css" rel="stylesheet" /></home>
 
