--- a/BioRec - MarketPlace/Views/Home/LandingPage.cshtml
+++ b/BioRec - MarketPlace/Views/Home/LandingPage.cshtml
@@ -19,7 +19,7 @@
     <h5>y la de tu familia</h5>
     <br />
     <br />
-    <button class="btn btn-info botonPred" >Ver más</button>
+    <a asp-action="ListaProducto" class="btn btn-info botonPred" >Ver más</a>
 </div>
 
 
